--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@types/node": "^16.18.30",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
+    "@types/react-dropzone": "^5.1.0",
     "axios": "^1.4.0",
     "effector": "^22.8.5",
     "effector-react": "^22.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.0.0",
     "react-scripts": "5.0.1",
