--- a/package.json
+++ b/package.json
@@ -15,15 +15,19 @@
     "@types/react-dom": "^18.2.4",
     "@types/react-dropzone": "^5.1.0",
     "axios": "^1.4.0",
+    "date-fns": "^2.30.0",
     "effector": "^22.8.5",
     "effector-react": "^22.5.2",
     "graphql-ws": "^5.13.1",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.0.0",
     "react-scripts": "5.0.1",
+    "react-simple-timestamp-to-date": "^1.0.3",
+    "react-timestamp": "^6.0.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
